openshift/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: sebastianeichh-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: quay.io/sebastianeichh/beta-battle-api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 9000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: sebastianeichh-dev
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: management
      port: 9000
      targetPort: 9000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
  namespace: sebastianeichh-dev
spec:
  host: api-sebastianeichh-dev.apps.rm2.thpm.p1.openshiftapps.com
  to:
    kind: Service
    name: api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
