openshift/athlete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: athlete
  namespace: sebastianeichh-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: athlete
  template:
    metadata:
      labels:
        app: athlete
    spec:
      containers:
        - name: athlete
          image: ghcr.io/sebastiancle/beta-battle-athlete:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: athlete
  namespace: sebastianeichh-dev
spec:
  selector:
    app: athlete
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: athlete
  namespace: sebastianeichh-dev
spec:
  host: athlete-sebastianeichh-dev.apps.rm2.thpm.p1.openshiftapps.com
  to:
    kind: Service
    name: athlete
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
