openshift/scoreboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoreboard
  namespace: sebastianeichh-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scoreboard
  template:
    metadata:
      labels:
        app: scoreboard
    spec:
      containers:
        - name: scoreboard
          image: ghcr.io/sebastianeichhammer/beta-battle-scoreboard:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: scoreboard
  namespace: sebastianeichh-dev
spec:
  selector:
    app: scoreboard
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: scoreboard
  namespace: sebastianeichh-dev
spec:
  host: scoreboard-sebastianeichh-dev.apps.rm2.thpm.p1.openshiftapps.com
  to:
    kind: Service
    name: scoreboard
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
